Fix: Remove Java 11 code from Java 8 mod